# spdlog-config

./: .gitignore  .gitmodules  CMakeLists.txt  build.hs  loggers.toml
include/: spdlog-config.hpp
src/: file-sink.cpp  internal.hpp  loglevel.cpp  null-sink.cpp  sinks.cpp  spdlog-config.cpp  stdout-sink.cpp
test/: CMakeLists.txt  log-level.cpp  main.cpp  parse-size.cpp  parse-time.cpp  sinks.cpp
